--- a/package.json
+++ b/package.json
@@ -5,13 +5,27 @@
   "main": "main.js",
   "dependencies": {
     "gulp": "^3.8.10",
-    "hapi": "^8.0.0",
-    "socket.io": "^1.2.1"
+    "gulp-concat": "^2.4.2",
+    "gulp-less": "^2.0.1",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-uglify": "^1.0.2",
+    "socket.io": "^1.2.1",
+    "express": "^4.10.5",
+    "gulp-watch": "^3.0.0",
+    "hapi": "^8.0.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Swampy821/Game.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Swampy821/Game/issues"
+  },
+  "homepage": "https://github.com/Swampy821/Game"
 }
